# remote-signer

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json.example  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GIT.md  INTEGRATION.md  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  SECURITY_AUDIT.md  TESTING.md  WORKFLOW.md  config.e2e.yaml  config.example.yaml  config.full.yaml  config.mcp-dev.yaml  config.tui_e2e.yaml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  e2e_test_config.yaml  embedded.go  go.mod  go.sum
.githooks/: README.md  pre-commit  pre-push
configs/: config.example.yaml
deploy/: seccomp.json
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  CONFIGURATION.md  DEPLOYMENT.md  FLOW.md  Project_Architecture_Blueprint.md  README.md  RULES_TEMPLATES_AND_PRESETS.md  RULE_SYNTAX.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW.md  TESTING.md  TLS.md  TUI.md  USE_CASES.md  agent.md  api.md  architecture.md  components.md  (+19 more)
pkg/rs-client/: Cargo.toml  README.md
pkg/rs-client/src/: acls.rs  client.rs  error.rs  lib.rs
pkg/rs-client/src/apikeys/: apikeys.rs  mod.rs  types.rs
pkg/rs-client/src/audit/: audit.rs  mod.rs  types.rs
pkg/rs-client/src/evm/: broadcast.rs  guard.rs  hdwallets.rs  mod.rs  requests.rs  rules.rs  service.rs  sign.rs  signers.rs  simulate.rs  types.rs
pkg/rs-client/src/presets/: mod.rs  presets.rs
pkg/rs-client/src/templates/: mod.rs  templates.rs  types.rs
pkg/rs-client/src/transport/: auth.rs  mod.rs  tls.rs  transport.rs
(+1229 files in other folders)
