[package]
name = "remote-signer-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for the remote-signer service"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
base64 = "0.22"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zeroize = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
assert_matches = "1"
